<resources>
    <string name="app_name">Peduli Bicara</string>
    <string name="hello">Halo,</string>
    <string name="module">Modul</string>
    <string name="lorem_ipsum_15">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tristique a ex vel dictum. Proin.</string>
    <string name="your_score">Skor Kamu</string>
    <string name="main_menu">Menu Utama</string>
    <string name="set_question">Pilih Soal</string>
    <string name="next">Lanjut</string>
    <string name="do_not_have_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="parents_name">Nama orang tua</string>
    <string name="child_name">Nama anak</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="body_parts">Bagian Tubuh</string>
    <string name="body_parts_description">Terdiri atas berbagai jenis bagian tubuh</string>
    <string name="food">Makanan</string>
    <string name="food_description">Terdiri atas berbagai jenis makanan</string>
    <string name="animals">Hewan</string>
    <string name="animals_description">Terdiri atas berbagai jenis hewan</string>
    <string name="module_description">Modul terdiri dari 3 kategori (Hewan, Makanan dan Bagian Tubuh)</string>
    <string name="guess_card">Tebak Kartu</string>
    <string name="guess_voice_description">Diberikan beberapa opsi kartu secara acak untuk menjawab pertanyaan via suara</string>
    <string name="guess_voice">Tebak suara</string>
    <string name="guess_card_description">Menebak kartu yang ditampilkan, dengan menggunakan sistem speech recognition</string>
    <string name="search">Cari…</string>
    <string name="games">Permainan</string>
    <string name="head">Kepala</string>
    <string name="lips">Bibir</string>
    <string name="nose">Hidung</string>
    <string name="eyes">Mata</string>
    <string name="ear">Telinga</string>
    <string name="foot">Telapak Kaki</string>
    <string name="hand">Tangan</string>
    <string name="hair">Rambut</string>
    <string name="shoulders">Pundak</string>
    <string name="cheek">Pipi</string>
    <string name="waist">Pinggang</string>
    <string name="belly">Perut</string>
    <string name="mouth">Mulut</string>
    <string name="knee">Lutut</string>
    <string name="tongue">Lidah</string>
    <string name="arm">Lengan</string>
    <string name="nail">Kuku</string>
    <string name="leg">Kaki</string>
    <string name="fingers">Jari</string>
    <string name="forehead">Dahi</string>
    <string name="fried_rice">Nasi Goreng</string>
    <string name="cake">Kue</string>
    <string name="fried_chicken">Ayam Goreng</string>
    <string name="ice_cream">Es Krim</string>
    <string name="cheese">Keju</string>
    <string name="rice">Nasi</string>
    <string name="pudding">Pudding</string>
    <string name="milk">Susu</string>
    <string name="sausage">Sosis</string>
    <string name="lettuce">Selada</string>
    <string name="donut">Donat</string>
    <string name="bread">Roti</string>
    <string name="satay">Sate</string>
    <string name="melon">Melon</string>
    <string name="mellon">Melon</string>
    <string name="banana">Pisang</string>
    <string name="watermelon">Semangka</string>
    <string name="apple">Apel</string>
    <string name="pineapple">Nanas</string>
    <string name="orange">Jeruk</string>
    <string name="grape">Anggur</string>
    <string name="mango">Mangga</string>
    <string name="cereal">Sereal</string>
    <string name="porridge">Bubur</string>
    <string name="egg">Telur</string>
    <string name="papaya">Pepaya</string>
    <string name="crocodile">Buaya</string>
    <string name="bird">Burung</string>
    <string name="elephant">Gajah</string>
    <string name="tiger">Harimau</string>
    <string name="giraffe">Jerapah</string>
    <string name="turtle">Kura-kura</string>
    <string name="monkey">Monyet</string>
    <string name="panda">Panda</string>
    <string name="penguin">Penguin</string>
    <string name="deer">Rusa</string>
    <string name="cow">Sapi</string>
    <string name="lion">Singa</string>
    <string name="zebra">Zebra</string>
    <string name="cat">Kucing</string>
    <string name="dog">Anjing</string>
    <string name="chicken">Ayam</string>
    <string name="goat">Kambing</string>
    <string name="rabbit">Kelinci</string>
    <string name="kangaroo">Kangguru</string>
    <string name="mosquito">Nyamuk</string>
    <string name="ant">Semut</string>
    <string name="butterfly">Kupu-kupu</string>
    <string name="crab">Kepiting</string>
    <string name="fish">Ikan</string>
    <string name="jellyfish">Ubur-ubur</string>
    <string name="lizard">Cicak</string>
    <string name="duck">Bebek</string>
    <string name="boy">Laki-laki</string>
    <string name="girl">Perempuan</string>
    <string name="question_count">Soal: </string>
    <string name="right_answer">Benar:</string>
    <string name="wrong_answer">Salah:</string>
    <string name="slide_to_cancel">Geser untuk membatalkan</string>
    <string name="response_failure">Pengecekan gagal</string>
</resources>